tests/codegen/errors/codegen/strings/atom.codegen.40.collections.strings.rt.string.adjacent/rt_string_adjacent.mon
;; TEST-ID: tests.codegen.rt-string-adjacent
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-CODEGEN-ATOM: atom.codegen.40.collections.strings.rt.string.adjacent
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: strings
;; TEST-CATEGORY: 40-collections
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.adjacent-strings, monadc.context.tests.expected-failures
;; TEST-PURPOSE: Duplicate coverage for the connected-string diagnostic in the runtime/codegen corpus.
;; TEST-ATOM: "hello""world" is not implicit compile-time concatenation.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:40-collections/strings branch family
;; TEST-USES-ATOM: atom.codegen.category.40.collections
;; TEST-MENU: errors/codegen/strings/atom.codegen.40.collections.strings.rt.string.adjacent
;; TEST-MENU-PATH: codegen/errors/codegen/strings/atom.codegen.40.collections.strings.rt.string.adjacent
;; TEST-ATOM-LEAF: atom.codegen.40.collections.strings.rt.string.adjacent
;; TEST-CLI-TARGET: codegen errors codegen strings
(module Main)
(show "hello""world")
